--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,7 @@ services:
     build: ./raspberrypi-master/7-segment-display
     privileged: true
     network_mode: host
+  osquery:
+    build: ./raspberrypi-master/osquery
 
 
