Added pi-hole service to balenacloud/raspberrypi master
Thanks to balena.io/blog/deploy-network-wide-ad-blocking-with-pi-hole-and-a-raspberry-pi/
and https://github.com/klutchell/balena-pihole

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "scripts/pi_magazine"]
 	path = scripts/pi_magazine
 	url = https://github.com/simonmonk/pi_magazine
+[submodule "raspberrypi-master/balena-pihole"]
+	path = raspberrypi-master/balena-pihole
+	url = https://github.com/klutchell/balena-pihole
