--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,30 @@
 version: '2'
+
+volumes:
+  pihole_config:
+  dnsmasq_config:
+  dnscrypt_config:
+
 services:
+  pihole:
+    build: ./raspberrypi-master/pihole
+    privileged: true
+    volumes:
+      - 'pihole_config:/etc/pihole'
+      - 'dnsmasq_config:/etc/dnsmasq.d'
+    dns:
+      - '127.0.0.1'
+      - '1.1.1.1'
+    network_mode: host
+
+  # set pihole DNS1 and DNS2 service variables to 127.0.0.1#5053 to use dnscrypt-proxy for upstream DNS
+  dnscrypt-proxy:
+    build: ./raspberrypi-master/dnscrypt-proxy
+    volumes:
+      - 'dnscrypt_config:/config'
+    ports:
+      - '5053:5053/udp'
+
   frontend:
     build: ./raspberrypi-master/frontend
     ports:
