--- a/raspberrypi-master/7-segment-display/Dockerfile.template
+++ b/raspberrypi-master/7-segment-display/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM balenalib/%%BALENA_MACHINE_NAME%%-python:3-buster-run
+FROM balenalib/%%BALENA_MACHINE_NAME%%-python:3-stretch-run
 
 RUN install_packages build-essential python3-dev libfreetype6-dev libjpeg-dev libtiff5
 
