--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,3 +46,8 @@ services:
     dns:
       - '127.0.0.1'
     network_mode: host
+  arm_exporter:
+    image: carlosed/arm_exporter:latest
+    ports:
+      - "9243:9243"
+    privileged: true
