--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,16 @@ services:
       - '127.0.0.1'
     network_mode: host
   arm_exporter:
-    image: carlosedp/arm_exporter:latest
+    image: carlosedp/arm_exporter
+    environment:
+      - NODE_ID={{.Node.ID}}
+    command:
+      - '--collector.textfile.directory=/etc/rpi_exporter/'
     ports:
-      - "9243:9243"
-    privileged: true
+      - 9243:9243
+    networks:
+      - monitoring
+
+networks:
+  monitoring:
+    driver: overlay
