--- a/.github/workflows/balena_cloud_push.yml
+++ b/.github/workflows/balena_cloud_push.yml
@@ -6,11 +6,16 @@ on:
     branches:
       - master
 
-run: |
-        curl -L -o /tmp/balena.zip https://github.com/balena-io/balena-cli/releases/download/v11.28.5/balena-cli-v11.28.5-linux-x64-standalone.zip
-        unzip /tmp/balena.zip -d /opt
-        rm /tmp/balena.zip
-        export PATH=$PATH:/opt/balena-cli
-        balena login --token ${{secrets.BALENA_API_TOKEN}}
-        balena push ${{secrets.BALENA_APPLICATION_NAME}}
+jobs:
+  balena_push:
+    runs-on: ubuntu-latest
+    steps:
+      - name: push
+      - run: |
+           curl -L -o /tmp/balena.zip https://github.com/balena-io/balena-cli/releases/download/v11.28.5/balena-cli-v11.28.5-linux-x64-standalone.zip
+           unzip /tmp/balena.zip -d /opt
+           rm /tmp/balena.zip
+           export PATH=$PATH:/opt/balena-cli
+           balena login --token ${{secrets.BALENA_API_TOKEN}}
+           balena push ${{secrets.BALENA_APPLICATION_NAME}}
 
