--- a/.github/workflows/balena_cloud_push.yml
+++ b/.github/workflows/balena_cloud_push.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: push
-      - run: |
+        run: |
            curl -L -o /tmp/balena.zip https://github.com/balena-io/balena-cli/releases/download/v11.28.5/balena-cli-v11.28.5-linux-x64-standalone.zip
            unzip /tmp/balena.zip -d /opt
            rm /tmp/balena.zip
