Added paths-ignore to ignore docs and k8s folder
Do not build balena unneccesarily

--- a/.github/workflows/balena_cloud_push.yml
+++ b/.github/workflows/balena_cloud_push.yml
@@ -5,6 +5,9 @@ on:
     # Only run workflow for pushes to specific branches
     branches:
       - master
+    paths-ignore:
+    - 'docs/**'
+    - 'k8s/**'
 
 jobs:
   balena_push:
