--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ volumes:
   pihole_config:
   dnsmasq_config:
   dnscrypt_config:
+  spotifycache:
+  bluetoothcache:
+  snapcast:
 
 services:
   pihole:
@@ -46,3 +49,68 @@ services:
     dns:
       - '127.0.0.1'
     network_mode: host
+  bluetooth-audio:
+    build: ./raspberrypi-master/bluetooth-audio
+    restart: on-failure
+    network_mode: host
+    privileged: true
+    labels:
+      io.balena.features.dbus: 1
+    volumes:
+      - bluetoothcache:/var/cache/bluetooth
+      - snapcast:/var/cache/snapcast
+  airplay:
+    build: ./raspberrypi-master/airplay
+    restart: on-failure
+    network_mode: host
+    privileged: true
+    labels:
+      io.balena.features.dbus: 1
+    volumes:
+      - snapcast:/var/cache/snapcast
+  spotify:
+    build: ./raspberrypi-master/spotify
+    restart: on-failure
+    network_mode: host
+    privileged: true
+    volumes:
+      - spotifycache:/var/cache/raspotify
+      - snapcast:/var/cache/snapcast
+  fleet-supervisor:
+    build: ./raspberrypi-master/fleet-supervisor
+    restart: on-failure
+    network_mode: host
+    privileged: true
+    ports:
+      - 3000:3000
+    labels:
+      io.balena.features.supervisor-api: 1
+  snapcast-server:
+    build:
+      context: ./raspberrypi-master/snapcast-server
+      args:
+        SNAPCAST_VERSION: 0.19.0
+    restart: on-failure
+    ports:
+      - 1704:1704
+      - 1705:1705
+    volumes:
+      - snapcast:/var/cache/snapcast
+  snapcast-client:
+    build:
+      context: ./raspberrypi-master/snapcast-client
+      args:
+        SNAPCAST_VERSION: 0.19.0
+    restart: on-failure
+    network_mode: host
+    privileged: true
+    volumes:
+      - snapcast:/var/cache/snapcast
+  upnp:
+    build: ./raspberrypi-master/upnp
+    restart: on-failure
+    network_mode: host
+    ports:
+      - 49494:49494
+    volumes:
+      - snapcast:/var/cache/snapcast
