--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: '3.x'
       - name: Install dependencies
         run: |
-          pip install sphinx myst-parser
+          pip install sphinx myst-parser sphinxcontrib-mermaid
       - name: Build docs
         run: |
           cd docs
