--- a/gitops/clusters/homelab/infrastructure-config/metallb/kustomization.yaml
+++ b/gitops/clusters/homelab/infrastructure-config/metallb/kustomization.yaml
@@ -1,16 +1,4 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: metallb-config
-  namespace: flux-system
-spec:
-  interval: 5m
-  path: ./gitops/clusters/homelab/infrastructure-config/metallb   # repo-root
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
-  dependsOn:
-    - name: metallb          # <- this is the name Flux gives to Phase 1
-      namespace: flux-system
+resources:
+  - address-pool.yaml
+  - metallb-config.kustomization.yaml   # the CR we just renamed
 
