--- a/gitops/clusters/homelab/kustomization.yaml
+++ b/gitops/clusters/homelab/kustomization.yaml
@@ -1,8 +1,8 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
   # keep Flux itself
   - flux-system
-
-# optional:  common labels you want propagated
-# commonLabels:
-#   environment: homelab
+  - infrastructure/metallb               #(chart + CRDs)
+#  - infrastructure-config/metallb-config        #(address-pool)
 
