--- a/gitops/clusters/homelab/kustomization.yaml
+++ b/gitops/clusters/homelab/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
   - flux-system
   - infrastructure/metallb               #(chart + CRDs)
   - infrastructure-config/metallb-config        #(address-pool)
+  - apps/ollama
 
