docs: use local storage for Prometheus
Grafana remains on Longhorn. Update monitoring guide and Helm values. Refs issue 'Use local storage for Prometheus'.

--- a/k8s/monitoring-values.yaml
+++ b/k8s/monitoring-values.yaml
@@ -18,7 +18,7 @@ prometheus:
       volumeClaimTemplate:
         spec:
           accessModes: ["ReadWriteOnce"]
-          storageClassName: longhorn
+          storageClassName: local-path
           resources:
             requests:
               storage: 100Gi
