--- a/gitops/clusters/homelab/apps/ollama/service.yaml
+++ b/gitops/clusters/homelab/apps/ollama/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ollama
+  name: ollama-lb
   namespace: ollama
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: ollama-gpu
   ports:
-    - port: 80
-      targetPort: 11434
-      nodePort: 31080
+    - name: http
+      port: 80             # external port
+      targetPort: 11434    # ollama container port
       protocol: TCP
 
