--- a/gitops/clusters/homelab/apps/ollama/ingress.yaml
+++ b/gitops/clusters/homelab/apps/ollama/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: traefik
 spec:
+  ingressClassName: traefik
   rules:
   - host: ollama.app.homelab
     http:
