feat: add stable diffusion webui deployment via flux
closes #40

--- a/gitops/clusters/homelab/kustomization.yaml
+++ b/gitops/clusters/homelab/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
   - infrastructure/monitoring            #(kube-prometheus-stack)
   - infrastructure-config/metallb-config        #(address-pool)
   - apps/ollama
+  - apps/stable-diffusion
 
