Fix #46: enable extension install for stable diffusion
Add --enable-insecure-extension-access flag via COMMANDLINE_ARGS and update docs.

--- a/gitops/clusters/homelab/apps/stable-diffusion/deployment.yaml
+++ b/gitops/clusters/homelab/apps/stable-diffusion/deployment.yaml
@@ -25,6 +25,9 @@ spec:
         - name: webui
           image: universonic/stable-diffusion-webui:full
           imagePullPolicy: IfNotPresent
+          env:
+            - name: COMMANDLINE_ARGS
+              value: "--enable-insecure-extension-access"
           ports:
             - containerPort: 8080
           resources:
