--- a/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
@@ -9,6 +9,16 @@ grafana:
       - ReadWriteOnce
     size: 10Gi
     storageClassName: longhorn
+  affinity:
+    nodeAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 100
+          preference:
+            matchExpressions:
+              - key: kubernetes.io/hostname
+                operator: In
+                values:
+                  - k3s-vm-still-fawn
 
 prometheus:
   prometheusSpec:
