Use local-path for Grafana volumes
Switch Grafana persistence from Longhorn to local-path. Updates monitoring guide accordingly. Fixes #67.

--- a/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
@@ -8,7 +8,7 @@ grafana:
     accessModes:
       - ReadWriteOnce
     size: 10Gi
-    storageClassName: longhorn
+    storageClassName: local-path
   affinity:
     nodeAffinity:
       preferredDuringSchedulingIgnoredDuringExecution:
