--- a/gitops/clusters/homelab/infrastructure/monitoring/kustomization.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - namespace.yaml
   - helmrepository.yaml
   - helmrelease.yaml
+  - cpu-alerting-rules.yaml
 
 configMapGenerator:
   - name: monitoring-values
