--- a/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
@@ -24,14 +24,18 @@ prometheus:
   prometheusSpec:
     # Retain 30 days of raw data (adjust as needed)
     retention: 30d
-    storageSpec:
-      volumeClaimTemplate:
-        spec:
-          accessModes: ["ReadWriteOnce"]
-          storageClassName: local-path
-          resources:
-            requests:
-              storage: 100Gi
+    nodeSelector:
+      kubernetes.io/hostname: k3s-vm-still-fawn
+    volumes:
+      - name: prometheus-storage
+        hostPath:
+          path: /mnt/smb_data/prometheus
+          type: Directory
+    volumeMounts:
+      - name: prometheus-storage
+        mountPath: /prometheus
+    storage:
+      disableMountSubPath: true
     additionalScrapeConfigs:
       - job_name: "proxmox-node-exporter"
         static_configs:
@@ -45,3 +49,47 @@ prometheus:
         static_configs:
           - targets:
               - 192.168.4.122:9221   # pve-proxmox-metrics
+
+alertmanager:
+  config:
+    global:
+      smtp_smarthost: 'smtp.gmail.com:587'
+      smtp_from: 'your-email@gmail.com'
+      smtp_auth_username: 'your-email@gmail.com'
+      smtp_auth_password_file: /etc/alertmanager/secrets/smtp-password
+    route:
+      group_by: ['alertname', 'instance']
+      group_wait: 30s
+      group_interval: 5m
+      repeat_interval: 24h
+      receiver: 'email-notifications'
+    receivers:
+      - name: 'email-notifications'
+        email_configs:
+          - to: 'g_skumar@yahoo.com'
+            subject: '🚨 K3s Cluster Alert: {{ range .Alerts }}{{ .Annotations.summary }}{{ end }}'
+            body: |
+              {{ range .Alerts }}
+              Alert: {{ .Annotations.summary }}
+              Description: {{ .Annotations.description }}
+              Severity: {{ .Labels.severity }}
+              Instance: {{ .Labels.instance }}
+              Time: {{ .StartsAt }}
+              {{ end }}
+    inhibit_rules:
+      - source_match:
+          severity: 'critical'
+        target_match:
+          severity: 'warning'
+        equal: ['alertname', 'instance']
+  alertmanagerSpec:
+    secrets:
+      - alertmanager-smtp-secret
+    storage:
+      volumeClaimTemplate:
+        spec:
+          accessModes: ["ReadWriteOnce"]
+          storageClassName: local-path
+          resources:
+            requests:
+              storage: 1Gi
