Add Samba Flux deployment with MetalLB and DNS integration
- Create complete Samba Flux manifests with MetalLB LoadBalancer (192.168.4.53)
- Remove hostNetwork dependency for better security and networking
- Add comprehensive DNS configuration guide for OPNsense Unbound DNS
- Update CLAUDE.md with homelab DNS architecture and service deployment patterns
- Include step-by-step OPNsense DNS override configuration
- Add Windows/macOS/Linux client access instructions with DNS names
- Provide migration guide with zero-downtime strategy and rollback plan
- Support samba.homelab DNS access instead of raw IP addresses

Follows homelab pattern: non-HTTP services get MetalLB IPs with DNS entries.
Ready for migration execution with Phase 1 complete (replicas: 0).

refs #86

--- a/gitops/clusters/homelab/kustomization.yaml
+++ b/gitops/clusters/homelab/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
   - infrastructure-config/metallb-config        #(address-pool)
   - apps/ollama
   - apps/stable-diffusion
+  - apps/samba
 
