Implement custom storage class for Prometheus 2TB drive migration
Create clean solution using custom storage class approach:
- Add prometheus-2tb-storage StorageClass pointing to /mnt/smb_data/prometheus
- Create static PV with nodeAffinity for k3s-vm-still-fawn
- Update monitoring-values.yaml to use custom storage class (500Gi)
- Add nodeSelector to ensure Prometheus runs on correct node
- Remove invalid hostPath configuration

This approach uses proper Kubernetes storage patterns and ensures
Prometheus data is stored on the 2TB drive at /mnt/smb_data/prometheus.

Next: Apply changes and migrate existing PVC to new storage class.

closes #85

--- a/gitops/clusters/homelab/infrastructure/monitoring/kustomization.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - namespace.yaml
   - helmrepository.yaml
   - helmrelease.yaml
+  - prometheus-storage-class.yaml
 
 configMapGenerator:
   - name: monitoring-values
