Fix alertmanager custom config with templateFiles override
- Add templateFiles: {} to enable custom alertmanager configuration
- Revert to secret-based approach for all email credentials
- This should make the custom SMTP config take effect

refs #96

--- a/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
@@ -49,6 +49,8 @@ prometheus:
               - 192.168.4.122:9221   # pve-proxmox-metrics
 
 alertmanager:
+  enabled: true
+  templateFiles: {}
   config:
     global:
       smtp_smarthost: 'smtp.mail.yahoo.com:587'
