Switch to Zoho SMTP for homeiac.alerts@minibloks.com
- Update SMTP server to smtppro.zoho.com:587
- Secret updated with Zoho credentials for homeiac.alerts@minibloks.com
- Alerts will be sent from and to homeiac.alerts@minibloks.com

refs #96

--- a/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
@@ -53,7 +53,7 @@ alertmanager:
   templateFiles: {}
   config:
     global:
-      smtp_smarthost: 'smtp.mail.yahoo.com:587'
+      smtp_smarthost: 'smtppro.zoho.com:587'
       smtp_from_file: /etc/alertmanager/secrets/alertmanager-smtp-secret/smtp-from
       smtp_auth_username_file: /etc/alertmanager/secrets/alertmanager-smtp-secret/smtp-username
       smtp_auth_password_file: /etc/alertmanager/secrets/alertmanager-smtp-secret/smtp-password
