Switch to Grafana unified alerting for email notifications
- Remove broken AlertmanagerConfig CRD approach
- Enable Grafana unified alerting with proper SMTP configuration
- Use extraSecretMounts and file-based credentials for security
- Disable legacy alerting, enable unified alerting
- This provides working email alerts through Grafana instead of Prometheus Alertmanager

fixes #96

--- a/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/monitoring-values.yaml
@@ -77,3 +77,20 @@ grafana:
     host: smtppro.zoho.com:587
     fromAddress: homeiac.alerts@minibloks.com
     skipVerify: false
+  grafana.ini:
+    unified_alerting:
+      enabled: true
+    alerting:
+      enabled: false
+    smtp:
+      enabled: true
+      host: smtppro.zoho.com:587
+      user: $__file{/etc/secrets/smtp-credentials/user}
+      password: $__file{/etc/secrets/smtp-credentials/pass}
+      from_address: homeiac.alerts@minibloks.com
+      skip_verify: false
+  extraSecretMounts:
+    - name: smtp-credentials
+      secretName: smtp-credentials
+      mountPath: /etc/secrets/smtp-credentials
+      readOnly: true
