fix: move PAD to high-memory node to resolve OOMKilled crashes
- Change node preference from k3s-vm-pve (1.8GB) to k3s-vm-still-fawn (15.6GB)
- k3s-vm-pve only has ~500MB free, insufficient for Prophet ML training
- k3s-vm-still-fawn has ~5GB free, adequate for 2-4GB ML workloads
- Fixes CrashLoopBackOff with exit code 137 (OOMKilled)

--- a/gitops/clusters/homelab/infrastructure/monitoring/pad-deployment.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/pad-deployment.yaml
@@ -25,14 +25,14 @@ spec:
               - key: kubernetes.io/hostname
                 operator: In
                 values:
-                - k3s-vm-pve  # 1st choice: lowest CPU (7%)
+                - k3s-vm-still-fawn  # 1st choice: high memory (15.6GB)
           - weight: 80
             preference:
               matchExpressions:
               - key: kubernetes.io/hostname
                 operator: In
                 values:
-                - k3s-vm-chief-horse  # 2nd choice: moderate CPU (23%)
+                - k3s-vm-chief-horse  # 2nd choice: medium memory (3.8GB)
           
           # Fallback: any available Linux node (including still-fawn if needed)
           requiredDuringSchedulingIgnoredDuringExecution:
