fix: remove PAD memory limits to prevent OOMKilled crashes
- Remove 2Gi memory limit that was causing exit code 137
- Prophet ML training with 15+ days of data needs more memory
- Add monitoring script to track actual memory usage
- Will set appropriate limits based on observed usage patterns

--- a/gitops/clusters/homelab/infrastructure/monitoring/pad-deployment.yaml
+++ b/gitops/clusters/homelab/infrastructure/monitoring/pad-deployment.yaml
@@ -67,11 +67,9 @@ spec:
         
         resources:
           requests:
-            memory: "512Mi"
+            memory: "1Gi"
             cpu: "200m"
-          limits:
-            memory: "2Gi"
-            cpu: "1000m"  # Allow bursts for ML training
+          # No limits - let it use what it needs, we'll monitor and set limits based on actual usage
         
         livenessProbe:
           httpGet:
