feat: add hybrid persistence for Webtop development tools
- Add ConfigMap with init scripts for essential CLI tools
- Configure proot-apps for persistent user-space applications
- Mount custom init scripts to install dev tools on startup
- Implements hybrid approach: quick CLI tools via init + VS Code via proot-apps

--- a/gitops/clusters/homelab/apps/webtop/deployment.yaml
+++ b/gitops/clusters/homelab/apps/webtop/deployment.yaml
@@ -73,6 +73,9 @@ spec:
           mountPath: /config
         - name: dev-shm
           mountPath: /dev/shm
+        - name: init-scripts
+          mountPath: /custom-cont-init.d
+          readOnly: true
       volumes:
       - name: config
         persistentVolumeClaim:
@@ -83,3 +86,7 @@ spec:
         emptyDir:
           medium: Memory
           sizeLimit: 2Gi
+      - name: init-scripts
+        configMap:
+          name: webtop-init-scripts
+          defaultMode: 0755
