--- a/gitops/clusters/homelab/apps/webtop/kustomization.yaml
+++ b/gitops/clusters/homelab/apps/webtop/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: webtop
 resources:
   - namespace.yaml
   - pvc.yaml
+  - configmap.yaml
   - deployment.yaml
   - service.yaml
   - ingress.yaml
