--- a/gitops/clusters/homelab/apps/webtop/deployment.yaml
+++ b/gitops/clusters/homelab/apps/webtop/deployment.yaml
@@ -59,6 +59,10 @@ spec:
           name: http
         - containerPort: 3001
           name: https
+        - containerPort: 22
+          name: ssh
+        - containerPort: 3389
+          name: rdp
         resources:
           requests:
             nvidia.com/gpu: 1
