--- a/gitops/clusters/homelab/apps/webtop/service.yaml
+++ b/gitops/clusters/homelab/apps/webtop/service.yaml
@@ -14,5 +14,11 @@ spec:
   - port: 3001
     targetPort: 3001
     name: https
+  - port: 22
+    targetPort: 22
+    name: ssh
+  - port: 3389
+    targetPort: 3389
+    name: rdp
   selector:
     app: webtop
