--- a/gitops/clusters/homelab/apps/webtop/deployment.yaml
+++ b/gitops/clusters/homelab/apps/webtop/deployment.yaml
@@ -73,10 +73,8 @@ spec:
             memory: "8Gi"
             cpu: "4"
         livenessProbe:
-          httpGet:
-            path: /
+          tcpSocket:
             port: 3000
-            scheme: HTTP
           initialDelaySeconds: 30
           periodSeconds: 30
           timeoutSeconds: 10
@@ -103,9 +101,9 @@ spec:
                 exit 1
               fi
               exit 0
-          initialDelaySeconds: 60
+          initialDelaySeconds: 120
           periodSeconds: 30
-          timeoutSeconds: 5
+          timeoutSeconds: 10
           successThreshold: 1
           failureThreshold: 3
         volumeMounts:
