--- a/gitops/clusters/homelab/apps/webtop/configmap.yaml
+++ b/gitops/clusters/homelab/apps/webtop/configmap.yaml
@@ -33,10 +33,12 @@ data:
       python3-pip \
       python3-venv \
       golang \
-      nodejs \
-      npm \
       openssh-server \
       xrdp
+    
+    # Install Node.js from NodeSource (includes npm)
+    curl -fsSL https://deb.nodesource.com/setup_lts.x | bash -
+    apt-get install -y nodejs
     
     # Install GitHub CLI
     curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
