security: restrict Docker daemon to localhost only
- Configure Docker daemon to bind only to 127.0.0.1:2375 instead of 0.0.0.0:2375
- Add explicit --tls=false to suppress security warnings
- This prevents network-wide root access while maintaining functionality
- Docker is now only accessible from within the same pod

--- a/gitops/clusters/homelab/apps/webtop/deployment.yaml
+++ b/gitops/clusters/homelab/apps/webtop/deployment.yaml
@@ -23,6 +23,13 @@ spec:
         env:
         - name: DOCKER_TLS_CERTDIR
           value: ""
+        - name: DOCKER_HOST
+          value: "tcp://127.0.0.1:2375"
+        args:
+        - dockerd
+        - --host=tcp://127.0.0.1:2375
+        - --host=unix:///var/run/docker.sock
+        - --tls=false
         securityContext:
           privileged: true
         volumeMounts:
@@ -42,7 +49,7 @@ spec:
         - name: TITLE
           value: "Development Environment"
         - name: DOCKER_HOST
-          value: "tcp://localhost:2375"
+          value: "tcp://127.0.0.1:2375"
         - name: CUSTOM_USER
           value: "gshiva"
         - name: PASSWORD
